--- a/css/_grids.scss
+++ b/css/_grids.scss
@@ -41,10 +41,10 @@
  *
  * csswizardry grids also has push and pull classes which allow you to nudge
  * grid items left and right by a defined amount. These follow the same naming
- * convention as above, but are prepended by either `push--` or `pull--`, for
+ * convention as above, but are prepended by either 'push--' or 'pull--', for
  * example:
  *
-   `class="grid__item  one-half  push--one-half"`
+   'class="grid__item  one-half  push--one-half"'
  *
  * This would give you a grid item which is 50% width and pushed over to the
  * right by 50%.
@@ -53,11 +53,11 @@
  * quickly be able to piece together any combinations you can imagine, for
  * example:
  *
-   `class="grid__item  one-whole  lap--one-half  desk--one-third  push--desk--one-third"`
+   'class="grid__item  one-whole  lap--one-half  desk--one-third  push--desk--one-third"'
  *
-   `class="grid__item  one-quarter  palm--one-half  push--palm--one-half"`
+   'class="grid__item  one-quarter  palm--one-half  push--palm--one-half"'
  *
-   `class="grid__item  palm--one-third  desk--five-twelfths"`
+   'class="grid__item  palm--one-third  desk--five-twelfths"'
  */
 
 
@@ -69,13 +69,13 @@
 \*------------------------------------*/
 /**
  * If you are building a non-responsive site but would still like to use
- * csswizardry-grids, set this to ‘false’:
+ * csswizardry-grids, set this to 'false':
  */
 $responsive:            true !default;
 
 
 /**
- * Is this build mobile first? Setting to ‘true’ means that all grids will be
+ * Is this build mobile first? Setting to 'true' means that all grids will be
  * 100% width if you do not apply a more specific class to them.
  */
 $mobile-first:          true !default;
@@ -89,7 +89,7 @@ $gutter:                24px !default;
 
 
 /**
- * Would you like Sass’ silent classes, or regular CSS classes?
+ * Would you like Sass' silent classes, or regular CSS classes?
  */
 $use-silent-classes:    false !default;
 
@@ -102,7 +102,7 @@ $pull:                  false !default;
 
 
 /**
- * Using `inline-block` means that the grid items need their whitespace removing
+ * Using 'inline-block' means that the grid items need their whitespace removing
  * in order for them to work correctly. Set the following to true if you are
  * going to achieve this by manually removing/commenting out any whitespace in
  * your HTML yourself.
@@ -118,7 +118,7 @@ $use-markup-fix:        false !default;
 
 /**
  * Define your breakpoints. The first value is the prefix that shall be used for
- * your classes (e.g. `.palm--one-half`), the second value is the media query
+ * your classes (e.g. '.palm--one-half'), the second value is the media query
  * that the breakpoint fires at.
  */
 $breakpoints: (
@@ -136,8 +136,8 @@ $breakpoints: (
  * compile as much CSS as you need. All are turned on by default, but you can
  * add and remove breakpoints at will.
  *
- * Push and pull shall only be used if `$push` and/or `$pull` and `$responsive`
- * have been set to ‘true’.
+ * Push and pull shall only be used if '$push' and/or '$pull' and '$responsive'
+ * have been set to 'true'.
  */
 $breakpoint-has-widths: ('small', 'medium', 'medium-down', 'large') !default;
 $breakpoint-has-push:   ('small', 'medium', 'medium-down', 'large') !default;
@@ -146,7 +146,7 @@ $breakpoint-has-pull:   ('small', 'medium', 'medium-down', 'large') !default;
 
 /**
  * You do not need to edit anything from this line onward; csswizardry-grids is
- * good to go. Happy griddin’!
+ * good to go. Happy griddin'!
  */
 $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
@@ -161,7 +161,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
  * These mixins are for the library to use only, you should not need to modify
  * them at all.
  *
- * Enclose a block of code with a media query as named in `$breakpoints`.
+ * Enclose a block of code with a media query as named in '$breakpoints'.
  */
 @mixin grid-media-query($media-query) {
     $breakpoint-found: false;
@@ -180,14 +180,14 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
     }
 
     @if not $breakpoint-found {
-        @warn "Breakpoint ‘#{$media-query}’ does not exist";
+        @warn "Breakpoint '#{$media-query}' does not exist";
     }
 }
 
 
 /**
- * Drop relative positioning into silent classes which can’t take advantage of
- * the `[class*="push--"]` and `[class*="pull--"]` selectors.
+ * Drop relative positioning into silent classes which can't take advantage of
+ * the '[class*="push--"]' and '[class*="pull--"]' selectors.
  */
 @mixin silent-relative {
     @if $use-silent-classes {
@@ -205,7 +205,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 /**
  * 1. Allow the grid system to be used on lists.
  * 2. Remove any margins and paddings that might affect the grid system.
- * 3. Apply a negative `margin-left` to negate the columns’ gutters.
+ * 3. Apply a negative 'margin-left' to negate the columns' gutters.
  */
 #{$class-type}grid {
     list-style:none;                /* [1] */
@@ -252,7 +252,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
 /**
  * Reversed grids allow you to structure your source in the opposite order to
- * how your rendered layout will appear. Extends `.grid`.
+ * how your rendered layout will appear. Extends '.grid'.
  */
 #{$class-type}grid--rev {
     direction:rtl;
@@ -267,7 +267,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
 /**
  * Gutterless grids have all the properties of regular grids, minus any spacing.
- * Extends `.grid`.
+ * Extends '.grid'.
  */
 #{$class-type}grid--full {
     margin-left:0;
@@ -279,7 +279,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
 
 /**
- * Align the entire grid to the right. Extends `.grid`.
+ * Align the entire grid to the right. Extends '.grid'.
  */
 #{$class-type}grid--right {
     text-align:right;
@@ -292,7 +292,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
 /**
  * Centered grids align grid items centrally without needing to use push or pull
- * classes. Extends `.grid`.
+ * classes. Extends '.grid'.
  */
 #{$class-type}grid--center {
     text-align:center;
@@ -304,8 +304,8 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
 
 /**
- * Align grid cells vertically (`.grid--middle` or `.grid--bottom`). Extends
- * `.grid`.
+ * Align grid cells vertically ('.grid--middle' or '.grid--bottom'). Extends
+ * '.grid'.
  */
 #{$class-type}grid--middle {
 
@@ -323,7 +323,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
 
 /**
- * Create grids with narrower gutters. Extends `.grid`.
+ * Create grids with narrower gutters. Extends '.grid'.
  */
 #{$class-type}grid--narrow {
     margin-left:-($gutter / 2);
@@ -335,7 +335,7 @@ $class-type: if($use-silent-classes, unquote("%"), unquote("."));
 
 
 /**
- * Create grids with wider gutters. Extends `.grid`.
+ * Create grids with wider gutters. Extends '.grid'.
  */
 #{$class-type}grid--wide {
     margin-left:-($gutter * 2);
