--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@ body, html {
 }
 
 body{
-  background: url(../images/lootbox.png);
+  background: url(../images/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   font-family: $font-stack;
@@ -44,7 +44,9 @@ h3{
 }
 .content{
   background: white;
-  margin-top: 30px;
+  margin: 30px 0px;
+  padding: 0px 25px 25px;
+  border-radius: 3px;
 }
 
 .item-section{
@@ -60,9 +62,39 @@ h3{
   }
 }
 
+.small-wrapper{
+  width: 100%;
+  max-width: 600px;
+  margin: 0px auto;
+}
+
+/*--------------------- ALERTS ---------------------*/
+
+.version{
+  font-size: 9px;
+  color: rgba(255,255,255,0.6);
+  font-weight: 300;
+  vertical-align: middle;
+  padding-left: 15px;
+}
+
+.note{
+  background-color: rgba(0,0,0,0.3);
+  border-radius: 3px;
+  color: white;
+  margin: 10px;
+  font-size: 18px;
+  padding: 8px 10px;
+  i{
+    padding-right: 15px;
+    font-size: 20px;
+    vertical-align: middle;
+  }
+}
+
 /*--------------------- NAVIGATION ---------------------*/
 
-header{background: black ;padding: 15px 0px;}
+header{background: #29354d ;padding: 15px 0px;}
 header a{text-decoration: none;}
 header h1{
   text-align: center;
@@ -171,7 +203,7 @@ nav{
   margin-right: auto;
   width: 100%;
   max-width: 500px;
-  
+
 }
 
 .shakebox{
@@ -185,7 +217,7 @@ nav{
   10%, 90% {
     transform: translate3d(-1px, 0, 0);
   }
-  
+
   20%, 80% {
     transform: translate3d(2px, 0, 0);
   }
@@ -288,6 +320,13 @@ nav{
   background-position: 50%;
   background-repeat: no-repeat;
  }
+
+.ana{
+  background-image: url(../images/ana.png);
+  background-size: 64%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
 
 .bastion{
   background-image: url(../images/bastion.png);
