--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@ body{
   background: url(../images/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   font-family: $font-stack;
   font-size: 14px;
   font-weight: 400;
@@ -323,7 +324,7 @@ nav{
 
 .ana{
   background-image: url(../images/ana.png);
-  background-size: 64%;
+  background-size: 48%;
   background-position: 50%;
   background-repeat: no-repeat;
 }
