--- a/css/style.scss
+++ b/css/style.scss
@@ -37,6 +37,7 @@ h3{
 
 .cwrapper{
   width: 100%;
+
   @media only screen and (min-width: 1200px) {
   max-width: 980px;
   margin: 0px auto;
@@ -50,12 +51,18 @@ h3{
 }
 
 .item-section{
-  min-height: 350px;
-  margin-top: 50px;
+  min-height: 300px;
+  margin-top: 20px;
+
+  @media only screen and (min-width: 769px) {
+    min-height: 350px;
+    margin-top: 50px;
+  }
 }
 
 .wrapper{
   width: 100%;
+
   @media only screen and (min-width: 1200px) {
   max-width: 1400px;
   margin: 0px auto;
@@ -85,10 +92,18 @@ h3{
   margin: 10px;
   font-size: 18px;
   padding: 8px 10px;
+
   i{
     padding-right: 15px;
     font-size: 20px;
     vertical-align: middle;
+  }
+
+  a{
+    color: white;
+    &:hover{
+      opacity: 0.7;
+    }
   }
 }
 
@@ -100,6 +115,7 @@ header h1{
   text-align: center;
   font-family: "Open Sans", sans-serif;
   margin: 0;
+
   @media only screen and (min-width: 769px) {
 	text-align: left;
   }
@@ -146,6 +162,7 @@ nav{
   transition: 0.2s ease all;
   text-transform: uppercase;
   text-decoration: none;
+
   @media only screen and (min-width: 481px) {
     padding: 10px 50px;
     width: auto;
@@ -236,6 +253,12 @@ nav{
 #crate{
   list-style: none;
   padding: 0px;
+  margin: 0px 5px;
+
+  @media only screen and (min-width: 769px) {
+    margin: 0px;
+  }
+
   li{
     float: left;
     border-radius: 7px;
@@ -243,6 +266,8 @@ nav{
     width: 100%;
     text-align: center;
     padding: 20px 0px;
+    margin: 3px 0px;
+
     @media only screen and (min-width: 769px) {
       padding: 190px 0px 20px 0px;
       margin: 1%;
@@ -320,6 +345,13 @@ nav{
   background-position: 50%;
   background-repeat: no-repeat;
  }
+
+ .sombra{
+  background-image: url(../images/sombra.png);
+  background-size: 48%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
 
 .ana{
   background-image: url(../images/ana.png);
@@ -467,6 +499,7 @@ nav{
 
 @media only screen and (max-width: 768px) {
   .generic, .bastion, .dva, .genji, .hanzo, .junkrat, .lucio, .mccree, .mei, .mercy, .pharah, .reaper, .reinhardt, .roadhog, .soldier, .symmetra, .torbjorn, .tracer, .widowmaker, .winston, .zarya, .zenyatta{
-    background-image: none;
+    background-size: 30%;
+    background-position: 98% 35%;
   }
 }
