--- a/css/style.css
+++ b/css/style.css
@@ -1066,8 +1066,8 @@ nav {
 
 .sombra {
   background-image: url(../images/sombra.png);
-  background-size: 48%;
-  background-position: 50%;
+  background-size: 55%;
+  background-position: 50% 45%;
   background-repeat: no-repeat; }
 
 .ana {
