--- a/css/style.css
+++ b/css/style.css
@@ -988,11 +988,12 @@ nav {
     border-radius: 7px;
     font-size: 12px;
     width: 100%;
-    text-align: center;
-    padding: 20px 0px;
+    text-align: left;
+    padding: 20px 20px;
     margin: 3px 0px; }
     @media only screen and (min-width: 769px) {
       #crate li {
+        text-align: center;
         padding: 190px 0px 20px 0px;
         margin: 1%;
         max-width: 23%; } }
