--- a/css/style.scss
+++ b/css/style.scss
@@ -11,31 +11,49 @@ body, html {
   height: 100%;
 }
 
-body{
-  background: url(../images/bg.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+body {
+  background-color: #29354d;
   font-family: $font-stack;
   font-size: 14px;
   font-weight: 400;
+
+  @media only screen and (min-width: 769px) {
+    //background: url(../images/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  } 
 }
 
-h1, h2{
+a {
+  color: $blue;
+  transition: ease-in 0.2s;
+  &:hover {
+    color: lighten($blue ,20%);
+  }
+}
+
+h1, h2 {
   font-family: $header-stack;
   font-size: 2em;
 }
-h3{
+h3 {
   font-family: $header-stack;
   font-size: 1.5em;
 }
 
-.center{
+.center {
   text-align: center;
+}
+
+.logo {
+  &:hover {
+    opacity: 0.85;
+  }
 }
 
 /*--------------------- CONTAINERS ---------------------*/
 
-.cwrapper{
+.cwrapper {
   width: 100%;
 
   @media only screen and (min-width: 1200px) {
@@ -43,24 +61,29 @@ h3{
   margin: 0px auto;
   }
 }
-.content{
+.content {
   background: white;
   margin: 30px 0px;
   padding: 0px 25px 25px;
   border-radius: 3px;
 }
 
-.item-section{
+.item-section {
   min-height: 300px;
   margin-top: 20px;
 
   @media only screen and (min-width: 769px) {
-    min-height: 350px;
+    min-height: 360px;
     margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  
+  @media only screen and (min-width: 1400px) {
+    min-height: 480px
   }
 }
 
-.wrapper{
+.wrapper {
   width: 100%;
 
   @media only screen and (min-width: 1200px) {
@@ -69,15 +92,32 @@ h3{
   }
 }
 
-.small-wrapper{
+.small-wrapper {
   width: 100%;
   max-width: 600px;
   margin: 0px auto;
 }
 
+.details {
+  width: 100%;
+  max-width: 580px;
+  margin: 30px auto 0;
+  border-radius: 3px;
+  background-color: rgba(0,0,0,0.25);
+  p{
+    text-align: left;
+    padding: 0 10px;
+    color: white;
+  }
+  input {
+    width: 90%;
+    padding: 10px 0;
+  }
+}
+
 /*--------------------- ALERTS ---------------------*/
 
-.version{
+.version {
   font-size: 9px;
   color: rgba(255,255,255,0.6);
   font-weight: 300;
@@ -85,23 +125,28 @@ h3{
   padding-left: 15px;
 }
 
-.note{
+.note {
   background-color: rgba(0,0,0,0.3);
   border-radius: 3px;
   color: white;
-  margin: 10px;
-  font-size: 18px;
+  width: 81%;
+  margin: 20px auto;
+  font-size: 16px;
   padding: 8px 10px;
+  
+  @media only screen and (max-width: 768px) {
+    font-size: 11px;
+  }
 
-  i{
+  i {
     padding-right: 15px;
     font-size: 20px;
     vertical-align: middle;
   }
 
-  a{
+  a {
     color: white;
-    &:hover{
+    &:hover {
       opacity: 0.7;
     }
   }
@@ -109,9 +154,9 @@ h3{
 
 /*--------------------- NAVIGATION ---------------------*/
 
-header{background: #29354d ;padding: 15px 0px;}
-header a{text-decoration: none;}
-header h1{
+header {background: rgba(0,0,0,0.35);padding: 15px 0px;}
+header a {text-decoration: none;}
+header h1 {
   text-align: center;
   font-family: "Open Sans", sans-serif;
   margin: 0;
@@ -120,20 +165,20 @@ header h1{
 	text-align: left;
   }
 }
-nav{
+nav {
   max-width: 1000px;
   margin: 0px auto;
   width: 100%;
 }
 
-.loot{font-weight: 400; text-decoration: none; color: white;}
-.junkie{font-weight: bold; text-decoration: none; color: #f99e1a; }
+.loot {font-weight: 400; text-decoration: none; color: white;}
+.junkie {font-weight: bold; text-decoration: none; color: #f99e1a; }
 
-.nav{
+.nav {
   text-transform: uppercase;
-  ul{float: right; list-style: none;}
-  li{display: inline;}
-  li a{
+  ul {float: right; list-style: none;}
+  li {display: inline;}
+  li a {
     color: white;
     padding: 0px 12px;
     text-decoration: none;
@@ -141,14 +186,20 @@ nav{
     float: left;
     line-height: 8px;
   }
-  a:hover{
+  a:hover {
     color: darken(white, 50%);
+  }
+  li a.donate{
+    color: $yellow;
+    &:hover{
+      color: darken($yellow, 20%);
+    }
   }
 }
 
 /*--------------------- BUTTONS ---------------------*/
 
-.btn{
+.btn {
   padding: 10px 0px;
   width: 100%;
   display: inline-block;
@@ -162,6 +213,9 @@ nav{
   transition: 0.2s ease all;
   text-transform: uppercase;
   text-decoration: none;
+  &:hover {
+    color: white;
+  }
 
   @media only screen and (min-width: 481px) {
     padding: 10px 50px;
@@ -171,40 +225,40 @@ nav{
   }
 }
 
-.fa{
+.fa {
     font-size: 0.7em;
     vertical-align: middle;
 }
 
-.blue{
+.blue {
   background: $blue;
 }
 
-.blue:hover{
+.blue:hover {
   -webkit-box-shadow: 0px 0px 33px 0px rgba(0, 95, 255, 0.75);
   -moz-box-shadow: 0px 0px 33px 0px rgba(0, 95, 255, 0.75);
   box-shadow: 0px 0px 33px 0px rgba(0, 95, 255, 0.75);
   transition: ease-in-out all infinite 1.5s;
 }
 
-.blue:active{
+.blue:active {
   -webkit-box-shadow: 0px 0px 130px 20px rgba(0, 95, 255, 0.75);
   -moz-box-shadow: 0px 0px 130px 20px rgba(0, 95, 255, 0.75);
   box-shadow: 0px 0px 130px 20px rgba(0, 95, 255, 0.75);
   transition: ease-in-out all infinite 1.5s;
 }
 
-.yellow{
+.yellow {
   background: $yellow;
 }
 
-.yellow:hover{
+.yellow:hover {
   -webkit-box-shadow: 0px 0px 33px 0px rgba(249, 158, 26, 0.75);
   -moz-box-shadow: 0px 0px 33px 0px rgba(249, 158, 26, 0.75);
   box-shadow: 0px 0px 33px 0px rgba(255, 158, 26, 0.75);
   transition: ease-in-out all infinite 1.5s;
 }
-.yellow:active{
+.yellow:active {
   background: lighten($yellow, 30%);
   -webkit-box-shadow: 0px 0px 230px 20px rgba(249, 158, 26, 0.75);
   -moz-box-shadow: 0px 0px 230px 20px rgba(249, 158, 26, 0.75);
@@ -214,16 +268,23 @@ nav{
 
 /*--------------------- LOOT BOX ---------------------*/
 
-#box{
+#box {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
   max-width: 500px;
+  @media only screen and (min-width: 769px) {
+    padding-top: 55px;
+  }
+  
+  @media only screen and (min-width: 1400px) {
+    padding-top: 90px;
+  }
 
 }
 
-.shakebox{
+.shakebox {
   animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
@@ -250,7 +311,7 @@ nav{
 
 /*--------------------- LOOT CARDS ---------------------*/
 
-#crate{
+#crate {
   list-style: none;
   padding: 0px;
   margin: 0px 5px;
@@ -259,246 +320,355 @@ nav{
     margin: 0px;
   }
 
-  li{
+  li {
     float: left;
     border-radius: 7px;
     font-size: 12px;
     width: 100%;
-    text-align: center;
-    padding: 20px 0px;
+    padding: 20px 10px;
     margin: 3px 0px;
 
     @media only screen and (min-width: 769px) {
-      padding: 190px 0px 20px 0px;
+      padding: 125px 0px 125px 0px;
       margin: 1%;
+      text-align: center;
       max-width: 23%;
+      font-size: 13px;
+      
+      span {
+        padding: 30px 0;
+      }
+    }
+    
+    @media only screen and (min-width: 1400px) {
+      padding: 185px 0px 185px 0px;
     }
   }
 }
 
-#item0{
+#item0 {
   -webkit-animation-delay: 0.1s; /* Chrome, Safari, Opera */
   animation-delay: 0.1s;
 }
 
-#item1{
+#item1 {
   -webkit-animation-delay: 0.2s; /* Chrome, Safari, Opera */
   animation-delay: 0.2s;
 }
 
-#item2{
+#item2 {
   -webkit-animation-delay: 0.4s; /* Chrome, Safari, Opera */
   animation-delay: 0.4s;
 }
 
-#item3{
+#item3 {
   -webkit-animation-delay: 0.6s; /* Chrome, Safari, Opera */
   animation-delay: 0.6s;
 }
 
-.normal{
+.normal {
   font-weight: bold;
   color: #333;
   border: 1px solid #bbb;
   background-color: white;
-  -webkit-box-shadow: 0px 0px 33px 0px rgba(255,255,255,0.75);
-  -moz-box-shadow: 0px 0px 33px 0px rgba(255,255,255,0.75);
-  box-shadow: 0px 0px 33px 0px rgba(255,255,255,0.75);
+  //-webkit-box-shadow: 0px 0px 33px 0px rgba(255,255,255,0.75);
+  //-moz-box-shadow: 0px 0px 33px 0px rgba(255,255,255,0.75);
+  //box-shadow: 0px 0px 33px 0px rgba(255,255,255,0.75);
   box-sizing: border-box;
+  @media only screen and (min-width: 769px) {
+    span {
+      display: block;
+      background-color: rgba(255,255,255,0.8);
+    }
+  }
 }
-.rare{
+.rare {
   font-weight: bold;
-  color: #0070ff;
+  color: white;
   border: 1px solid #0070ff;
-  background-color: lighten(#0070ff, 30%);
-  -webkit-box-shadow: 0px 0px 33px 0px rgba(0,112,255,0.75);
-  -moz-box-shadow: 0px 0px 33px 0px rgba(0,112,255,0.75);
-  box-shadow: 0px 0px 33px 0px rgba(0,112,255,0.75);
+  background-color: #0070ff;
+  //-webkit-box-shadow: 0px 0px 33px 0px rgba(0,112,255,0.75);
+  //-moz-box-shadow: 0px 0px 33px 0px rgba(0,112,255,0.75);
+  //box-shadow: 0px 0px 33px 0px rgba(0,112,255,0.75);
   box-sizing: border-box;
+  @media only screen and (min-width: 769px) {
+    span {
+      display: block;
+      background-color: rgba(0,112,255,0.8);
+    }
+  }
 }
-.epic{
+.epic {
   font-weight: bold;
-  color: #B048F8;
+  color: white;
   border: 1px solid #B048F8;
-  background-color: lighten(#B048F8, 30%);
-  -webkit-box-shadow: 0px 0px 33px 0px rgba(176,72,248,0.75);
-  -moz-box-shadow: 0px 0px 33px 0px rgba(176,72,248,0.75);
-  box-shadow: 0px 0px 33px 0px rgba(176,72,248,0.75);
+  background-color: #B048F8;
+  //-webkit-box-shadow: 0px 0px 33px 0px rgba(176,72,248,0.75);
+  //-moz-box-shadow: 0px 0px 33px 0px rgba(176,72,248,0.75);
+  //box-shadow: 0px 0px 33px 0px rgba(176,72,248,0.75);
   box-sizing: border-box;
+  @media only screen and (min-width: 769px) {
+    span {
+      display: block;
+      background-color: rgba(176,72,248,0.8);
+    }
+  }
 }
-.legendary{
+.legendary {
   font-weight: bold;
-  color: #ff8000;
+  color: white;
   border: 1px solid #ff8000;
-  background-color: lighten(#ff8000, 30%);
-  -webkit-box-shadow: 0px 0px 33px 0px rgba(255,128,0,0.75);
-  -moz-box-shadow: 0px 0px 33px 0px rgba(255,128,0,0.75);
-  box-shadow: 0px 0px 33px 0px rgba(255,128,0,0.75);
+  background-color: #ff8000;
+  //-webkit-box-shadow: 0px 0px 33px 0px rgba(255,128,0,0.75);
+  //-moz-box-shadow: 0px 0px 33px 0px rgba(255,128,0,0.75);
+  //box-shadow: 0px 0px 33px 0px rgba(255,128,0,0.75);
   box-sizing: border-box;
+  @media only screen and (min-width: 769px) {
+    span {
+      display: block;
+      background-color: rgba(255,128,0,0.8);
+    }
+  }
 }
 
 /*--------------------- HEROES ---------------------*/
 
-.generic{
-  background-image: url(../images/generic.png);
-  background-size: 100%;
-  background-position: 50%;
+.generic {
+  background-image: url(../images/generic.png);;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/overwatch-full.jpg);
+  }
  }
 
- .sombra{
+.orisa {
+  background-image: url(../images/orisa.png);
+  background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/orisa-full.jpg);
+  }
+}
+
+ .sombra {
   background-image: url(../images/sombra.png);
-  background-size: 48%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/sombra-full.jpg);
+  }
 }
 
-.ana{
+.ana {
   background-image: url(../images/ana.png);
-  background-size: 48%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/ana-full.jpg);
+  }
 }
 
-.bastion{
+.bastion {
   background-image: url(../images/bastion.png);
-  background-size: 64%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/bastion-full.jpg);
+  }
 }
-.dva{
+.dva {
   background-image: url(../images/dva.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/dva-full.jpg);
+  }
 }
-.genji{
+.genji {
   background-image: url(../images/genji.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/genji-full.jpg);
+  }
 }
-.hanzo{
+.hanzo {
   background-image: url(../images/hanzo.png);
-  background-size: 44%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/hanzo-full.jpg);
+  }
 }
-.junkrat{
+.junkrat {
   background-image: url(../images/junkrat.png);
-  background-size: 40%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/junkrat-full.jpg);
+  }
 }
-.lucio{
+.lucio {
   background-image: url(../images/lucio.png);
-  background-size: 31%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/lucio-full.jpg);
+  }
 }
 
-.mccree{
+.mccree {
   background-image: url(../images/mccree.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/mccree-full.jpg);
+  }
 }
 
-.mei{
+.mei {
   background-image: url(../images/mei.png);
-  background-size: 43%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/mei-full.jpg);
+  }
 }
-.mercy{
+.mercy {
   background-image: url(../images/mercy.png);
-  background-size: 90%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/mercy-full.jpg);
+  }
 }
-.pharah{
+.pharah {
   background-image: url(../images/pharah.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/pharah-full.jpg);
+  }
 }
 
-.reaper{
+.reaper {
   background-image: url(../images/reaper.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/reaper-full.jpg);
+  }
 }
 
-.reinhardt{
+.reinhardt {
   background-image: url(../images/reinhardt.png);
-  background-size: 80%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/reinhardt-full.jpg);
+  }
 }
-.roadhog{
+.roadhog {
   background-image: url(../images/roadhog.png);
-  background-size: 68%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/roadhog-full.jpg);
+  }
 }
-.soldier{
+.soldier {
   background-image: url(../images/soldier.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/soldier-full.jpg);
+  }
 }
-.soldier{
-  background-image: url(../images/soldier.png);
-  background-size: 50%;
-  background-position: 50%;
-  background-repeat: no-repeat;
-}
-.symmetra{
+.symmetra {
   background-image: url(../images/symmetra.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/symmetra-full.jpg);
+  }
 }
-.torbjorn{
+.torbjorn {
   background-image: url(../images/torbjorn.png);
-  background-size: 65%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/torbjorn-full.jpg);
+  }
 }
-.tracer{
+.tracer {
   background-image: url(../images/tracer.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/tracer-full.jpg);
+  }
 }
-.widowmaker{
+.widowmaker {
   background-image: url(../images/widowmaker.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/widowmaker-full.jpg);
+  }
 }
-.winston{
+.winston {
   background-image: url(../images/winston.png);
-  background-size: 75%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/winston-full.jpg);
+  }
 }
-.zarya{
+.zarya {
   background-image: url(../images/zarya.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/zarya-full.jpg);
+  }
 }
-.zenyatta{
+.zenyatta {
   background-image: url(../images/zenyatta.png);
-  background-size: 50%;
-  background-position: 50%;
   background-repeat: no-repeat;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/zenyatta-full.jpg);
+  }
 }
 
 @media only screen and (max-width: 768px) {
-  .generic, .bastion, .dva, .genji, .hanzo, .junkrat, .lucio, .mccree, .mei, .mercy, .pharah, .reaper, .reinhardt, .roadhog, .soldier, .symmetra, .torbjorn, .tracer, .widowmaker, .winston, .zarya, .zenyatta{
+  .generic, .bastion, .dva, .genji, .hanzo, .junkrat, .lucio, .mccree, .mei, .mercy, .pharah, .reaper, .reinhardt, .roadhog, .soldier, .symmetra, .torbjorn, .tracer, .widowmaker, .winston, .zarya, .zenyatta {
     background-size: 30%;
     background-position: 98% 35%;
   }
