--- a/css/style.scss
+++ b/css/style.scss
@@ -66,6 +66,9 @@ h3 {
   margin: 30px 0px;
   padding: 0px 25px 25px;
   border-radius: 3px;
+  .content-wrap{
+    padding: 5px 15px;
+  }
 }
 
 .item-section {
@@ -193,6 +196,30 @@ nav {
     color: $yellow;
     &:hover{
       color: darken($yellow, 20%);
+    }
+  }
+}
+
+.mobile-nav {
+  display: none;
+  list-style: none;
+  margin-left: 0;
+  @media only screen and (max-width: 768px) {
+    display: block;
+    text-align: center;
+    margin-left: 0;
+    padding-left: 0;
+    li {
+      display: inline-block;
+      text-align: center;
+      padding: 0px 15px;
+      a{
+        color: white;
+        opacity: 0.3;
+        &:hover {
+          opacity: 0.15;
+        }
+      }
     }
   }
 }
