--- a/css/style.css
+++ b/css/style.css
@@ -999,7 +999,13 @@ h3 {
 .wrapper {
   width: 100%;
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 769px) {
+  .wrapper {
+    max-width: 1250px;
+    margin: 0px auto;
+  }
+}
+@media only screen and (min-width: 1367px) {
   .wrapper {
     max-width: 1400px;
     margin: 0px auto;
